<resources>
    <string name="app_name">Adana Kebap House</string>
    <string name="company_name">Adana Kebap House</string>
    <string name="motto">Best Kebap House in town!</string>
    <string name="telephone" translatable="false">+90 232 251 29 22</string>
    <string name="hours" translatable="false">09:00 - 20:00</string>
    <string name="address">212 Akçay Street, Izmir</string>
</resources>
